# arbor

./: .gitignore  AI_Finance_Integration_Plan.md  AI_Finance_OpenSource_Survey.md  ARCHITECTURE.md  Coffee_Green_Bean_Trading_System_Feasibility.md  Coffee_Indirect_Price_Factors.md  Coffee_Price_Factors_Deep_Research.md  Coffee_Risk_Prediction_System_v2.md  DEPLOY.md  HANDOFF.md  README.md  _test_landed.py  coffee.py  coffee_system.py  pyproject.toml
.github/workflows/: tests.yml
.superpowers/sdd/: progress.md
agent/: __init__.py  api_server.py  cli.py  runtime.py
agent/agents/: __init__.py  analyst.py
agent/config/swarm/: coffee_hedge_team.yaml
agent/runs/20260416_031812_14_c81257/: state.json  trace.jsonl
agent/runs/20260416_031919_69_8037e0/: state.json  trace.jsonl
agent/runs/20260416_031953_86_6a2061/: req.json  state.json  trace.jsonl
agent/runs/20260416_032010_36_9da8a6/: trace.jsonl
agent/runs/20260416_043228_02_10f434/: state.json  trace.jsonl
agent/runs/20260416_043300_84_5f7ffd/: req.json  trace.jsonl
agent/src/agent/: __init__.py  loop.py  (+4 more)
agent/tools/: __init__.py  analysis.py  market.py  system.py
backtest/: __init__.py  backtesting_adapter.py  engine.py  exchange.py  futures_metrics.py  loader.py  metrics.py  models.py  runner.py  strategies.py
backtest/engines/: __init__.py  base.py  coffee.py
cli/: __init__.py  coffee_cli.py  polymarket_cli.py
config/: regimes.yaml
core/: __init__.py  decision_engine.py  event_bus.py  persistence.py  regime_config.py  scheduler.py  types.py
core/cost/: __init__.py  landed_cost.py
core/events/: __init__.py  bus.py  subscription.py
core/notify/: __init__.py  handlers.py  ops_alert.py
core/paper_trading/: __init__.py  engine.py
core/persistence/: __init__.py  database.py
core/state/: __init__.py  engine.py  record.py  scoring.py  signals.py
core/types/: __init__.py  constants.py  domain.py  enums.py  event.py  market.py  state.py
deploy/: arbor.env.example  coffee-scheduler.service  coffee-web.service  com.arbor.weekly-report.plist  provision.sh
docs/: publishing.md
domains/: __init__.py  base.py  finance_domain.py  policy_domain.py  supply_domain.py
domains/finance/: __init__.py  fx_data.py  polymarket_client.py  polymarket_monitor.py  price_data.py  scanner.py
domains/policy/: __init__.py  ldc_monitor.py  news_monitor.py  pesticide_monitor.py  scanner.py  tariff_monitor.py  trade_war_monitor.py
domains/supply/: __init__.py  cot_monitor.py  ice_monitor.py  oni_monitor.py  orchestrator.py  scanner.py  seasonal_monitor.py  weather_monitor.py
models/: enhanced_hedge_model.py  features.py  hedge_model.py  ml_advisor.py  model_manager.py  timesfm_adapter.py
reports/: __init__.py  cli.py  coffee_tui.py  demo_data.py  formatters.py  history.py  indicators.py  kelly.py  learning.py  llm_commentary.py  models.py  pdf_export.py  pipeline.py  prediction_report.py  provenance.py  reference_class.py
reports/exporters/: __init__.py  chinese_pdf_exporter.py  html_to_pdf.py  json_exporter.py  markdown_exporter.py  pdf_exporter.py  rich_exporter.py  text_exporter.py
scripts/: scheduler.py  subscribers.py  weekly_report_daemon.py
sources/: __init__.py  coffee_intel.py  data_registry.py  openbb_gateway.py  xcrawl_client.py
sources/climate/: __init__.py  noaa_oni.py  open_meteo.py
sources/coffee/: __init__.py  gfex_coffee.py  ico_spot.py  kc_history.py  yfinance_price.py
sources/cot/: __init__.py  cftc_cot.py  manual_cot.py
sources/finance/: nasdaq_cme.py
sources/fx/: __init__.py  yfinance.py
sources/inventory/: __init__.py  ice_inventory.py
sources/markets/: __init__.py  manual_polymarket.py  polymarket.py
sources/policy/: __init__.py  google_news_rss.py
sources/supply/: usda_fas.py  world_bank_coffee.py
tests/: conftest.py  test_agent.py  test_agent_analysis_tools.py  test_agent_e2e.py  test_agent_tools.py  test_attribution.py  test_backtest_parity.py  test_brier.py  test_china_section.py  test_cot_source.py  test_data_registry.py  test_data_registry_health.py  test_decision_engine.py  test_english_report.py  test_event_persistence.py  test_eventbus.py  test_ice_inventory_source.py  test_indicators.py  test_kelly.py  test_learning.py  test_llm_commentary.py  test_ml_pipeline.py  test_new_sources.py  test_no_import_cycle.py  test_ops_alert.py  test_pipeline_china_import_order.py  test_pipeline_formatting.py  test_policy_news.py  test_publishing.py  test_reference_class.py  test_scoring.py  test_scoring_config.py  test_track_record.py  test_unified_hedge.py  test_usda_fas.py  test_web_chat.py  test_weekly_daemon.py
web/: app.py  chat.py  track_record.py
web/templates/: archive.html  base.html  empty.html  error.html
(+84 files in other folders)
