[project]
name = "arbor"
version = "3.0.0"
description = "Event-driven coffee hedging system with multi-agent swarm"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Duncan"},
]
keywords = ["coffee", "hedging", "futures", "commodity", "trading", "agent", "swarm", "quantitative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint>=2.0.0",
    "yfinance>=0.2.30",
    "tushare>=1.2.89",
    "akshare>=1.10.0",
    "ccxt>=4.0.0",
    "duckdb>=1.2.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "mplfinance>=0.12.10b0",
    "apscheduler>=3.10",
    "smartmoneyconcepts>=0.0.1",
    "pyharmonics>=1.5.0",
    "fastapi>=0.104.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Scivor/arbor"
Repository = "https://github.com/Scivor/arbor"

[project.scripts]
arbor = "coffee:main"

[tool.setuptools]
py-modules = ["coffee", "coffee_system"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "backtest*", "core*", "domains*", "models*", "reports*", "scripts*", "sources*", "web*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, no network)",
    "integration: Integration tests (may need network)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# __init__.py 的 re-export 是刻意的（包公共 API 汇总出口）
"__init__.py" = ["F401"]
# scripts/* 的 sys.path 引导是刻意的（脚本直接运行时先定位项目根再 import）
"scripts/*" = ["E402"]
# models/* 同样有 sys.path 引导（模型可独立脚本化运行）
"models/*" = ["E402"]
# tests/test_agent.py 先 stub langchain 模块再 import 被测对象，顺序是刻意的
"tests/test_agent.py" = ["E402"]
